# get-rich-logger

./: README.md  mkdocs.yml  noxfile.py  pyproject.toml  versions.json
0.2.0/: 404.html  index.html  objects.inv
0.2.0/javascripts/: mathjax.js
0.2.0/reference/: SUMMARY.html  get_rich_logger.html
0.2.0/search/: search_index.js  search_index.json
0.3.0/: 404.html  index.html  objects.inv
0.3.0/example/: index.html
0.3.0/reference/SUMMARY/: index.html
0.3.0/reference/get_rich_logger/: index.html
0.3.0/search/: search_index.json
0.3.1/reference/: get_rich_logger.html
0.3.1/search/: search_index.js  search_index.json
0.3.1/sections/Development/How to/: 03_publishing.html
0.3.2/reference/: get_rich_logger.html
0.3.2/search/: search_index.js  search_index.json
0.4.0/: 404.html
0.4.0/reference/: SUMMARY.html  get_rich_logger.html
0.4.0/search/: search_index.js  search_index.json
0.4.1/: index.html  objects.inv
0.4.1/reference/: get_rich_logger.html
0.4.1/search/: search_index.js  search_index.json
0.4.1/sections/Home/: index.html
0.4.2/reference/: get_rich_logger.html
0.4.2/search/: search_index.js  search_index.json
docs/: example.md  index.md
docs/sections/Development/: 01_nox.md
docs/sections/Home/: index.md
docs/sections/User Guide/: 01_installation.md  index.md
scripts/: gen_ref_pages.py
src/get_rich_logger/: __init__.py  _logger.py  get_rich_logger.py
test/: 404.html  index.html
test/reference/: SUMMARY.html  get_rich_logger.html
test/search/: search_index.js  search_index.json
test/stylesheets/: extra.css
(+22 files in other folders)
