[tool.poetry]
name = "get-rich-logger"
version = "0.2.0"
description = ""
authors = ["Nicholas Butterly <butterlyn888@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-puml = "^1.2.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocstrings-python = "^1.7.5"
mike = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
